# hsm-research

./: .gitignore
.github/workflows/: build-container.yaml
docs/: CONTAINERS.md  PARSEC.md  SOFTHSM2.md  TPM.md  tedge-hsm-arch.drawio
golang/client/: README.md  go.mod  main.go
golang/http_client/: README.md  go.mod  go.sum  main.go
mosquitto/: DEBIAN.md  README.md
rust/client/: Cargo.toml  README.md  alpine.dockerfile  debian.dockerfile  docker-compose.alpine.yaml  docker-compose.debian.yaml  docker-compose.yaml  entrypoint.sh  justfile
rust/client/src/: main.rs
rust/client/src/dump/: Cargo.toml
rust/client/src/dump/src/: main.rs
rust/client/src/print_der/: print_der.rs
rust/semqtt/: Cargo.toml
rust/semqtt/src/: main.rs
tedge/: 50_configure.sh  OLD_NOTES.md  README.md  alpine.dockerfile  docker-compose.yaml  justfile  start-demo.sh
tedge-p11-kit-server/: config.env  justfile  nfpm.yaml
tedge-p11-kit-server/scripts/: postinst  postrm
tedge-p11-kit-server/services/systemd/: tedge-p11-kit-server.service  tedge-p11-kit-server.socket
