[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
asn1-rs = {version = "0.7.0", features = ["bigint"]}
base64 = "0.22.1"
color-backtrace = "0.6.1"
cryptoki = "0.8.0"
der = { version = "0.7.9", features = [
    "derive",
    "oid",
]}
hyper-rustls = { version = "0.27.5" }
pretty_env_logger = "0.5.0"
rumqttc = { version = "0.24.0" }
rustls-native-certs = "0.8.1"
tokio = "1.43.0"
tokio-rustls = {version = "0.26.1", default-features = true, features = [
    "ring"
]} 
x509-parser = "0.16.0"
